starlark-rust/starlark_syntax/src/syntax/grammar_tests/bad_assignment.golden
# @generated
# To regenerate, run:
# ```
# STARLARK_RUST_REGENERATE_GOLDEN_TESTS=1 cargo test -p starlark --lib
# ```

Program:
[x or y] = 1

Error:
error: left-hand-side of assignment must take the form `a`, `a.b` or `a[b]`
 --> bad_assignment:1:2
  |
1 | [x or y] = 1
  |  ^^^^^^
  |


Program:
[x] += 1

Error:
error: left-hand-side of modifying assignment cannot be a list or tuple
 --> bad_assignment:1:1
  |
1 | [x] += 1
  | ^^^
  |
